--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+.font-helvetica {
+  font-family: 'Arial', sans-serif;
+}
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
